# excavation-site-mercury

./: .gitignore  Cargo.toml  README.md
.github/workflows/: dev-builds.yml  rust.yml
media/: cover.kra
src/: camera.rs  dungeon.rs  enemy_ai.rs  fighter.rs  game_log.rs  interface.rs  leaderboard.rs  leaderboard_server.rs  level.rs  localization.rs  main.rs  player.rs  stats.rs  text_painter.rs  tile_painter.rs
src/fonts/: strip-fonts.sh
src/graphics/: quantize-tileset.sh  tileset.kra
