[package]
name = "excavation-site-mercury"
version = "1.0.0"
authors = ["Jens Pitkanen <jens@neon.moe>"]
edition = "2018"
description = "A roguelike set on a space mining colony, written in Rust with SDL2"

[dependencies]
sdl2 = { version = "^0.34", features = ["static-link", "bundled"] }
fontdue = "^0.4"
fontdue-sdl2 = "^0.1"
png = "^0.16"
rand_pcg = "^0.3"
rand_core = "^0.6"
serde = { version = "^1.0", features = ["derive"] }
bincode = "^1.3"
log = "^0.4"
env_logger = { version = "^0.8", optional = true }
lazy_static = "^1.4"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1

[package.metadata.bundle]
name = "Excavation Site Mercury"
identifier = "moe.neon.excavationsitemercury"
icon = ["src/graphics/icon-128x128.png"]
copyright = "Copyright 2021  Jens Pitkanen"
category = "RolePlaying"
